@@ -167,6 +167,7 @@ set(mediainfo_SRCS
 	MediaInfo/Text/File_Scc.cpp
 	MediaInfo/Text/File_Scte20.cpp
 	MediaInfo/Text/File_Teletext.cpp
+	MediaInfo/Video/File_Aic.cpp
 	MediaInfo/Video/File_Avc.cpp
 	MediaInfo/Video/File_Avc_Duplicate.cpp
 	MediaInfo/Video/File_AvsV.cpp
