@@ -928,6 +928,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\Source\MediaInfo\Video\File_Aic.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\Source\MediaInfo\Video\File_Avc.cpp"
 					>
 				</File>
@@ -1929,6 +1933,10 @@
 				>
 				<File
 					RelativePath="..\..\..\Source\MediaInfo\Video\File_AfdBarData.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\Source\MediaInfo\Video\File_Aic.h"
 					>
 				</File>
 				<File
