@@ -1,0 +1,58 @@
+// File_Aic - Info for Apple Intermediate Codec streams
+// Copyright (C) 2012-2012 MediaArea.net SARL, Info@MediaArea.net
+//
+// This library is free software: you can redistribute it and/or modify it
+// under the terms of the GNU Library General Public License as published by
+// the Free Software Foundation, either version 2 of the License, or
+// any later version.
+//
+// This library is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+// GNU Library General Public License for more details.
+//
+// You should have received a copy of the GNU Library General Public License
+// along with this library. If not, see <http://www.gnu.org/licenses/>.
+//
+//+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+//+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+//
+// Information about Apple Intermediate Codec video streams
+//
+//+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+
+//---------------------------------------------------------------------------
+#ifndef MediaInfo_AicH
+#define MediaInfo_AicH
+//---------------------------------------------------------------------------
+
+//---------------------------------------------------------------------------
+#include "MediaInfo/File__Analyze.h"
+//---------------------------------------------------------------------------
+
+namespace MediaInfoLib
+{
+
+//***************************************************************************
+// Class File_Aic
+//***************************************************************************
+
+class File_Aic : public File__Analyze
+{
+private :
+    //Streams management
+    void Streams_Fill();
+
+    //Buffer - Per element
+    void Header_Parse ();
+    void Data_Parse ();
+
+    //Temp
+    int16u Width;
+    int16u Height;
+    int8u  FieldFrame;
+};
+
+} //NameSpace
+
+#endif
